# chrono-projects

./: .clang-format  .gitignore  CMakeLists.txt  demo_crater.cpp  demo_foam.cpp  demo_massflow.cpp  demo_objectdrop.cpp  demo_shear.cpp  demo_shearDEM.cpp  demo_shearDVI.cpp  demo_soilbin.cpp  demo_suspension.cpp  demo_utils.h  demo_wheel.cpp  directShear.cpp  hmmwv.cpp  hmmwvDEM.cpp  hmmwvDEM_ditch.cpp  pressureSinkage.cpp  rad_im_schmutz.cpp  singleWheel.cpp  test_DVI.cpp  test_active.cpp  test_ball.cpp  test_box.cpp  test_capsule.cpp  test_collision.cpp  test_constraints.cpp  test_contact.cpp  test_fill.cpp  test_mesh.cpp  test_scaling.cpp  test_serial.cpp  test_shear.cpp  test_timing.cpp  test_utils.cpp
configuration_tests/: CMakeLists.txt  README.md
configuration_tests/cascade/: CMakeLists.txt  demo_CAS_robot.cpp
configuration_tests/dem/: CMakeLists.txt  demo_DEM_ballCosim.cpp
configuration_tests/fea/: CMakeLists.txt  demo_FEA_basic.cpp  demo_FEA_thermal.cpp
configuration_tests/fsi/: CMakeLists.txt  demo_FSI_ObjectDrop.cpp  demo_FSI_cylinderDrop.cpp
configuration_tests/gpu/: CMakeLists.txt  demo_GPU_ballcosim.cpp
configuration_tests/granular/: CMakeLists.txt  demo_GRAN_ballcosim.cpp
configuration_tests/irrlicht/: CMakeLists.txt  demo_IRR_collision.cpp  demo_IRR_collisionNSC.cpp  demo_IRR_debugDrawer_collisionModels.cpp  demo_IRR_invPendulum.cpp  demo_IRR_sliderCrank.cpp
configuration_tests/mbs/: CMakeLists.txt  demo_IRR_collisionNSC.cpp  demo_IRR_invPendulum.cpp  demo_IRR_sliderCrank.cpp
configuration_tests/mkl/: CMakeLists.txt  demo_MKL_MklEngine.cpp
configuration_tests/multicore/: CMakeLists.txt  demo_MCORE_mixerSMC.cpp
configuration_tests/parallel/: CMakeLists.txt  demo_PAR_mixerDEM.cpp  demo_PAR_mixerSMC.cpp
configuration_tests/parsers/: CMakeLists.txt  demo_PARSER_Adams.cpp  demo_PARSER_Python.cpp  demo_PARSER_YAML.cpp
configuration_tests/python/: CMakeLists.txt  demo_PY_parser.cpp  demo_PY_pyparser.cpp
configuration_tests/synchrono/: CMakeLists.txt  demo_SYN_scm.cpp
configuration_tests/urdf/: CMakeLists.txt  demo_PARSER_URDF_RoboSimian.cpp
configuration_tests/vehicle/: CMakeLists.txt  demo_VEH_CityBus.cpp  demo_VEH_hmmwv.cpp  demo_VEH_hmmwvDEM.cpp  demo_VEH_hmmwvSMC.cpp
configuration_tests/vsg/: CMakeLists.txt  demo_VSG_assets.cpp
fea/: CMakeLists.txt  demo_FEAbasic.cpp  demo_FEAthermal.cpp
irrlicht/: CMakeLists.txt  README.md  demo_collision.cpp  demo_inv_pendulum.cpp
metrics_tests/: BaseTest.h  CMakeLists.txt  README.md
metrics_tests/core/: CMakeLists.txt  metrics_CH_matMultAVX.cpp
metrics_tests/fea/: CMakeLists.txt  metrics_FEA_ANCFBeam.cpp  metrics_FEA_EASBrickIso.cpp  metrics_FEA_EASBrickIso_Grav.cpp  metrics_FEA_compute_contact_mesh.cpp  metrics_FEA_shellANCF.cpp
metrics_tests/gpu/: CMakeLists.txt  metrics_GPU_suite.cpp
metrics_tests/granular/: CMakeLists.txt  metrics_GRAN_settling.cpp  metrics_GRAN_suite.cpp
metrics_tests/multicore/: CMakeLists.txt  metrics_MCORE_settling.cpp
metrics_tests/parallel/: CMakeLists.txt  metrics_PAR_settling.cpp
metrics_tests/vehicle/: CMakeLists.txt  metrics_VEH_collisionToroidalTire.cpp
parallel/: CMakeLists.txt  README.md  demo_crater.cpp  demo_foam.cpp  demo_massflow.cpp  demo_objectdrop.cpp  demo_penetrometer.cpp  demo_shear.cpp  demo_soilbin.cpp  demo_suspension.cpp  demo_wheel.cpp  directShear.cpp  mixerDEM.cpp  pressureSinkage.cpp  rad_im_schmutz.cpp  singleWheel.cpp
projects/: CMakeLists.txt  README.md  utils.h
projects/DEME_tests/: CMakeLists.txt  test_DEME_BallDrop_Cosim.cpp  test_DEME_ConeDrop_Cosim.cpp  test_Rover_on_GRC_Incline.cpp  test_Viper_on_GRC.cpp  test_Viper_on_SphericalTerrain.cpp
projects/constraint_fluids/: CMakeLists.txt  constraint_fluid_settling_test.cpp  convex_hull.h  fording_setup.h  humvee_water_tank.cpp  input_output.h  m113_custom.h  test_CNFL_humvee_water_tank.cpp  test_CNFL_settling_test.cpp  test_CNFL_tracked_vehicle_fording.cpp  tracked_vehicle_fording.cpp
projects/core_tests/: CMakeLists.txt  test_CH_AVX.cpp  test_CH_SparseMatrix.cpp  test_CH_function_recorder.cpp  test_CH_integratorHHT.cpp  test_CH_vector.cpp
projects/cosimulation/: CMakeLists.txt
projects/crm_tests/: CMakeLists.txt  test_FSI-SPH_ConePenetrometer.cpp  test_FSI-SPH_Cratering.cpp  test_FSI-SPH_Hydrostatic.cpp  test_FSI-SPH_NormalBevameter.cpp
projects/dem_tests/: CMakeLists.txt  DemDemoUtils.h  test_DEM_Bucket.cpp  test_DEM_Coneflow.cpp  test_DEM_DamBreak.cpp  test_DEM_ballDrop.cpp  test_DEM_commvessels.cpp  test_DEM_compression.cpp  test_DEM_directshear.cpp  test_DEM_incline.cpp  test_DEM_milsettle.cpp  test_DEM_normal.cpp  test_DEM_repose.cpp  test_DEM_roll.cpp  test_DEM_rover.cpp  test_DEM_slide.cpp  test_DEM_soilBin.cpp  test_DEM_testsuite.cpp
projects/dem_validation/: CMakeLists.txt  test_VDEM_demo_crater.cpp  test_VDEM_demo_massflow.cpp  test_VDEM_demo_penetrometer.cpp  test_VDEM_demo_shear.cpp  test_VDEM_directShear.cpp  test_VDEM_pressureSinkage.cpp  test_VDEM_shear.cpp  test_VDEM_singleWheel.cpp
projects/fea_tests/: CMakeLists.txt  test_FEA_4HumveeTires.cpp  test_FEA_4HumveeTires_LuGre.cpp  test_FEA_abaqus_wheels.cpp  test_FEA_constraints.cpp  test_FEA_miniature.cpp  test_FEA_shellANCF.cpp  test_FEA_tireANCF.cpp  test_FEA_tireANCF_LuGre.cpp  test_FEA_tireCorotational.cpp
projects/fording/: CMakeLists.txt  fording_fluid.cpp
projects/gpu_tests/: CMakeLists.txt  GpuDemoUtils.h  test_GPU_Bucket.cpp  test_GPU_Coneflow.cpp  test_GPU_DamBreak.cpp  test_GPU_ballDrop.cpp  test_GPU_bulkcompress.cpp  test_GPU_commvessels.cpp  test_GPU_compression.cpp  test_GPU_directshear.cpp  test_GPU_incline.cpp  test_GPU_milsettle.cpp  test_GPU_mixer.cpp  test_GPU_normal.cpp  test_GPU_repose.cpp  test_GPU_roll.cpp  test_GPU_rover.cpp  test_GPU_slide.cpp  test_GPU_soilBin.cpp  test_GPU_testsuite.cpp
projects/granular_tests/: CMakeLists.txt  demo_GRAN_Bucket.cpp  demo_GRAN_DamBreak.cpp  demo_GRAN_rover.cpp  (+14 more)
vehicle/: CMakeLists.txt  README.md  hmmwv.cpp  hmmwvDEM.cpp  hmmwvDEM_ditch.cpp
vehicle_parallel/: CMakeLists.txt  hmmwv.cpp  hmmwvDEM.cpp  hmmwvDEM_ditch.cpp
(+169 files in other folders)
